# Raphael

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt  EditorApplication.cxx  EditorApplication.hxx  main.cxx
Editor/Actor/: Oscillator.cxx  Oscillator.hxx
Editor/Components/: Oscillator.hxx
Engine/: CMakeLists.txt  Raphael.hxx
Engine/Compilers/: ClangCompiler.cxx  ClangCompiler.hxx  Compiler.hxx  GNUCompiler.cxx  GNUCompiler.hxx  MSVCCompiler.cxx  MSVCCompiler.hxx
Engine/Core/: Application.cxx  Application.hxx  Buffer.hxx  Log.cxx  Log.hxx  Memory.cxx  Memory.hxx  RObject.cxx  RObject.hxx  Ref.cxx  Ref.hxx  TimeStep.hxx  UUID.cxx  UUID.hxx  Window.cxx
Engine/Core/Events/: Event.hxx  KeyEvent.hxx  MouseEvent.hxx  WindowEvent.hxx
Engine/Core/FrameGraph/: FrameGraph.cxx  FrameGraph.hxx  FrameGraph.inl  FrameGraphBuilder.hxx  PassNode.cxx  ResourceEntry.hxx  ResourceNode.cxx  ResourceNode.hxx
Engine/Core/RHI/: GenericRHI.cxx  GenericRHI.hxx  GenericRHI.inl  RHICommandQueue.cxx
Engine/Core/RHI/Resources/: RHIFramebuffer.hxx  RHIRenderPass.hxx  RHITexture.hxx
Engine/Core/Window/: Input.hxx  KeyCodes.hxx  Window.hxx
Engine/Misc/: Assertions.cxx  Assertions.hxx  DataLocation.cxx  EnumFlags.hxx  MiscDefines.hxx  SourceLocation.hxx  StringUtils.cxx  StringUtils.hxx  Utils.cxx  Utils.hxx
Engine/Renderer/: Image.cxx  Image.hxx  RenderCommandQueue.cxx  RenderCommandQueue.hxx  Renderer.cxx  Renderer.hxx  RendererAPI.hxx  RendererCapabilities.hxx  RendererConfig.hxx  RendererContext.cxx  RendererContext.hxx  Window.cxx  Window.hxx
Engine/Renderer/RHI/: GenericRHI.cxx  GenericRHI.hxx  IDynamicRHI.cxx  IDynamicRHI.hxx  RHI.hxx  RHICommandQueue.cxx  RHICommandQueue.hxx  RHIDefinitions.hxx  RHIResource.hxx
Engine/Renderer/RHI/Resources/: RHIFramebuffer.hxx  RHIRenderPass.hxx  RHIShader.hxx  RHITexture.hxx  RHIViewport.hxx
Engine/Renderer/Vulkan/: IVulkanDynamicRHI.hxx  Vulkan.cxx  Vulkan.hxx  VulkanAllocator.cxx  VulkanAllocator.hxx  VulkanCommandsObjects.cxx  VulkanCommandsObjects.hxx  VulkanContext.cxx  VulkanContext.hxx  VulkanDebug.cxx  VulkanDevice.cxx  VulkanDevice.hxx  VulkanDynamicRHI.cxx  VulkanDynamicRHI.hxx  VulkanGenericPlatform.cxx  VulkanGenericPlatform.hxx  VulkanImage.cxx  VulkanImage.hxx  VulkanLoader.hxx  VulkanMemoryManager.cxx  VulkanMemoryManager.hxx  VulkanPhysicalDevice.cxx  VulkanPhysicalDevice.hxx  VulkanPipeline.hxx  VulkanPlatform.cxx  VulkanQueue.cxx  VulkanQueue.hxx  VulkanRHI.cxx  VulkanRHI.hxx  VulkanRHI_Operations.cxx  VulkanRenderer.cxx  VulkanRenderer.hxx  VulkanResources.hxx  VulkanShader.cxx  VulkanShader.hxx  VulkanShaderCompiler.cxx  VulkanShaderCompiler.hxx  VulkanSwapChain.cxx  VulkanSwapChain.hxx  VulkanSwapchain.cxx  (+9 more)
Engine/Renderer/Vulkan/Linux/: VulkanLinuxPlatform.cxx  VulkanLinuxPlatform.hxx
Engine/Renderer/Vulkan/Resources/: VulkanFramebuffer.hxx  VulkanShader.cxx  VulkanShader.hxx  VulkanTexture.cxx  VulkanTexture.hxx  VulkanViewport.cxx  VulkanViewport.hxx
Engine/Renderer/Vulkan/Windows/: VulkanWindowsPlatform.cxx  VulkanWindowsPlatform.hxx
Engine/Threading/: Thread.cxx  Thread.hxx  ThreadPool.cxx  ThreadPool.hxx  ThreadRuntime.hxx
Engine/src/Engine/: Main.cxx  Raphael.hxx
Engine/src/Engine/AssetRegistry/: Asset.cxx  Asset.hxx  AssetRegistry.cxx  AssetRegistry.hxx  Material.cxx  Material.hxx  MeshFactory.cxx  MeshFactory.hxx
Engine/src/Engine/Compilers/: ClangCompiler.cxx  ClangCompiler.hxx  Compiler.hxx  GNUCompiler.cxx  GNUCompiler.hxx  MSVCCompiler.cxx  MSVCCompiler.hxx
Engine/src/Engine/Containers/: Array.hxx  ArrayView.hxx  Map.hxx  ResourceArray.hxx  String.hxx  StringView.hxx  Tuple.hxx
Engine/src/Engine/Core/: Application.cxx  Application.hxx  Engine.cxx  Engine.hxx  Events.hxx  Log.cxx  Log.hxx  Memory.cxx  Memory.hxx  RObject.cxx  RObject.hxx  RTTI.hxx  UUID.cxx  UUID.hxx  Window.cxx  Window.hxx
Engine/src/Engine/GameFramework/: Actor.cxx  Actor.hxx  CameraActor.cxx  CameraActor.hxx  World.cxx  World.hxx
Engine/src/Engine/Math/: Math.cxx  Math.hxx  Matrix.hxx  Matrix.inl  Quaternion.hxx  Quaternion.inl  Shapes.hxx  Transform.cxx  Transform.hxx  Transform.inl  Vector.hxx  Vector.inl  ViewPoint.hxx  ViewPoint.inl
Engine/src/Engine/Maths/: Matrix.hxx  Vector.hxx  Vector.inl
Engine/src/Engine/Misc/: Assertions.cxx  Assertions.hxx  CommandLine.cxx  CommandLine.hxx  DataLocation.cxx  DataLocation.hxx  Delegate.hxx  EnumFlags.hxx  Hash.hxx  Memory.cxx  Memory.hxx  MiscDefines.hxx  NamedClass.hxx  Profiler.hxx  RefCounted.hxx  SourceLocation.hxx  Timer.cxx  Timer.hxx  UniquePtr.hxx  Utils.cxx  Utils.hxx
Engine/src/Engine/Serialization/: FileStream.cxx  FileStream.hxx  Serialization.hxx  StreamReader.cxx  StreamReader.hxx  StreamWriter.cxx  StreamWriter.hxx
Engine/src/Engine/Threading/: Lock.hxx  Thread.cxx  Thread.hxx  ThreadPool.cxx  ThreadPool.hxx  ThreadRuntime.hxx
Engine/src/Engine/UI/: Slate.cxx  Slate.hxx
Engine/tests/: CommandLine.cxx  RHIShaderParametersTest.cxx  RTTI.cxx
Engine/tests/Containers/: Array.cxx  ArrayView.cxx  Map.cxx  String.cxx  StringView.cxx  Tuple.cxx
Engine/tests/Core/RTTI/: RTTI.cxx  RTTIParameter.cxx
Engine/tests/Math/: Common.hxx  Math.cxx  Matrix.cxx  Quaternion.cxx  Transform.cxx  Vector.cxx  ViewPoint.cxx
RHI/Vulkan/: CMakeLists.txt  VulkanCommandsObjects.cxx  VulkanCommandsObjects.hxx  VulkanDebug.cxx  VulkanDevice.cxx  VulkanDevice.hxx  VulkanLoader.hxx  VulkanMemoryManager.cxx  VulkanMemoryManager.hxx  VulkanPlatform.cxx  VulkanPlatform.hxx  VulkanQueue.cxx  VulkanQueue.hxx  VulkanRHI.cxx  VulkanRHI.hxx  VulkanRHI.pch.hxx  VulkanRHI_Operations.cxx  VulkanResources.hxx  VulkanShaderCompiler.cxx  VulkanShaderCompiler.hxx  VulkanSwapChain.cxx  VulkanSwapChain.hxx  VulkanSynchronization.cxx  VulkanSynchronization.hxx  VulkanUtils.cxx  VulkanUtils.hxx
RHI/Vulkan/Resources/: VulkanFramebuffer.hxx  VulkanShader.cxx  VulkanShader.hxx  VulkanTexture.cxx  VulkanTexture.hxx  VulkanViewport.cxx  VulkanViewport.hxx
RHI/Vulkan/src/VulkanRHI/: VulkanDebug.cxx  (+40 more)
RHI/Vulkan/tests/: ShaderCompiler.cxx
(+124 files in other folders)
